[gd_scene load_steps=5 format=2]

[ext_resource path="res://GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/MainMenu/CreditsScreen.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Titillium-Bold.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[node name="CreditsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1280.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_right = 1280.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 45.0
bbcode_enabled = true
bbcode_text = "Credits"
text = "Credits"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 49.0
margin_right = 1280.0
margin_bottom = 53.0

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 57.0
margin_right = 1280.0
margin_bottom = 288.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/ScrollVBox/ContentContainer"]
margin_right = 1280.0
margin_bottom = 231.0
custom_fonts/bold_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]This game is very early in its development. If you are reading this - thank you!

Project started by [color=#FF6A00]Rahi[/color] aka Alexofp on 01.08.2021
Active development began on 28.12.2021

Huge thanks to [color=#00B6FF]Ferri[/color] for playtesting the earliest versions and supporting me [color=red]<3[/color]

Thanks to [color=#0059FF]Godot team[/color] for creating the engine that this game is running on, it's a great achievement

Thanks to everyone else who I probably forgot..
[/center]"
text = "This game is very early in its development. If you are reading this - thank you!

Project started by Rahi aka Alexofp on 01.08.2021
Active development began on 28.12.2021

Huge thanks to Ferri for playtesting the earliest versions and supporting me <3

Thanks to Godot team for creating the engine that this game is running on, it's a great achievement

Thanks to everyone else who I probably forgot..
"
fit_content_height = true

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 100 )
columns = 5

[node name="CloseButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_right = 255.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Close"

[node name="SupportRahiButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 259.0
margin_right = 514.0
margin_bottom = 26.0
hint_tooltip = "In case you like my work and wanna support me <3"
size_flags_horizontal = 3
text = "Support Rahi"

[connection signal="pressed" from="VBoxContainer/GridContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/SupportRahiButton" to="." method="_on_SupportRahiButton_pressed"]
